--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@
 # Site settings
 # -----------------------------------------------------------------------------
 
-title: blank # the website title (if blank, full name will be used instead)
-first_name: You
-middle_name: R.
-last_name: Name
+title: GUO Yiheng # the website title (if blank, full name will be used instead)
+first_name: GUO
+middle_name: (Ethan)
+last_name: Yiheng
 contact_note: >
-  You can even add a little note about which of these is the best way to reach you.
+  HKUST COMP 28' 
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
